Versions update
java: 14 preview (records)
junit: 5.5.1 -> 5.6.2
lombok: 1.18.8 -> 1.18.12
gradle: 6.5 -> 6.5.1