@@ -5,6 +5,14 @@ plugins {
 sourceCompatibility = JavaVersion.VERSION_14
 targetCompatibility = JavaVersion.VERSION_14
 
+tasks.withType(JavaCompile).each {
+    it.options.compilerArgs.add('--enable-preview')
+}
+
+tasks.withType(Test) {
+    jvmArgs += "--enable-preview"
+}
+
 dependencies {
     annotationProcessor("org.projectlombok:lombok:${lombokVersion}")
     implementation("org.projectlombok:lombok:${lombokVersion}")
@@ -48,6 +56,42 @@ test {
 
     include "**/**Test.*"
     include "**/**Tests.*"
+
+    afterTest { desc, result ->
+        //org.gradle.api.internal.tasks.testing.results.DefaultTestResult
+        if (result.resultType == TestResult.ResultType.FAILURE) {
+            result.failures.each { failure ->
+                def sep = ("=" * 80)
+                if (failure instanceof Throwable) {
+                    StringWriter writer = new StringWriter()
+                    failure.printStackTrace(new PrintWriter(writer))
+                    failure = writer.toString()
+                    writer.close()
+                }
+                System.err.printf("%n${sep}%n${failure}%n${sep}%n%n")
+            }
+        }
+    }
+
+    afterSuite { desc, result ->
+        if (!desc.parent && result.testCount > 0) { // will match the outermost suite
+
+            def output = "${project.name}: ${result.resultType} (${result.testCount} tests"
+            if (result.successfulTestCount > 0 && result.testCount != result.successfulTestCount)
+                output += ", ${result.successfulTestCount} successes"
+            if (result.failedTestCount > 0)
+                output += ", ${result.failedTestCount} failures"
+            if (result.skippedTestCount > 0)
+                output += ", ${result.skippedTestCount} skipped"
+            output += ")"
+
+            def startItem = "| "
+            def endItem = " |"
+            def sep = ("-" * (startItem.length() + output.length() + endItem.length()))
+
+            (result.failedTestCount > 0 ? System.err : System.out).printf("%n${sep}%n${startItem}${output}${endItem}%n${sep}%n%n")
+        }
+    }
 }
 
 wrapper {
